[package]
edition = "2024"
name    = "rimport"
version = "0.1.0"

[dependencies]
bollard      = { version = "0.18.1" }
futures-util = { version = "0.3.30" }
tokio        = { version = "1.36", features = ["full"] }

[profile.release]
codegen-units = 1
lto           = true
opt-level     = "z"
panic         = "abort"
strip         = true
